--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -14,3 +14,4 @@ $colour-footer: #353535;
 $colour-location: #eaeaea;
 $colour-xpln-hover: #f5edff;
 $colour-xpln-icons: #7e7e7e;
+$colour-xpln-bkgnd: #e6e0e0;
